Refactor experience descriptions in LaTeX CV files for improved readability

--- a/src/experience/softswiss.tex
+++ b/src/experience/softswiss.tex
@@ -1,1 +1,3 @@
-I worked on a back office application used for management of online casinos. My work included implementing new functionality based on business requirements, like generating statistics/reports, functionality, user experience improvements, improving technical capabilities and performance of the system.
+I worked on a back office application used for management of online casinos. 
+My work included implementing new functionality based on business requirements, like generating statistics/reports, 
+functionality, user experience improvements, improving technical capabilities and performance of the system.
