--- a/src/experience/wildberries.tex
+++ b/src/experience/wildberries.tex
@@ -1,1 +1,4 @@
-I’ve started as an intern and have grown to the position of a junior backend developer working mainly on developing company’s job search website. My responsibilities were designing and developing the backend side of the application and communication with other backend teams.
+I’ve started as an intern and have grown to the position of a junior backend 
+developer working mainly on developing company’s job search website. 
+My responsibilities were designing and developing the backend side of the application 
+and communication with other backend teams.
