--- a/src/experience/yadro.tex
+++ b/src/experience/yadro.tex
@@ -1,1 +1,3 @@
-Working in a Telecom Department, developing network management and monitoring system for network elements on base stations. Its functionality includes, but not limited to: configuration, network elements management, report and statistics gathering and updating. Due to its use cases the system is under high load.
+Working in a Telecom Department, developing network management and monitoring system for network elements on base stations. 
+Its functionality includes, but not limited to: configuration, network elements management, report and statistics gathering and updating. 
+Due to its use cases the system is under high load.
