Enhance experience descriptions in LaTeX CV files for clarity and detail

--- a/src/experience/main.tex
+++ b/src/experience/main.tex
@@ -26,7 +26,7 @@
 
 \begin{experienceEntry}
 {\href{https://wildberries.ru}{\underline{Wildberries}}}
-{Online Marketplace}{Jan 2020 - Oct 2020}{Full-stack Developer}
+{Largest Online Marketplace in Russia}{Jan 2020 - Oct 2020}{Full-stack Developer}
     {\input{experience/wildberries.tex}}
 \end{experienceEntry}
 
