--- a/src/experience/softswiss.tex
+++ b/src/experience/softswiss.tex
@@ -1,3 +1,9 @@
 I worked on a back office application used for management of online casinos. 
-My work included implementing new functionality based on business requirements, like generating statistics/reports, 
-functionality, user experience improvements, improving technical capabilities and performance of the system.
+
+\begin{itemize}
+    \item Used profiling and tracing to improve performance of the system most used queries.
+    \item Initiated the codebase's refactor using newly introduced Go's Generics feature to improve 
+            code quality and readability. 
+    \item Developed a new feature to handle large reports export requests for clients which reduced developers' 
+            time spent on manual data export by 50\%. 
+\end{itemize}
