--- a/src/experience/wildberries.tex
+++ b/src/experience/wildberries.tex
@@ -1,4 +1,11 @@
 I’ve started as an intern and have grown to the position of a junior backend 
 developer working mainly on developing company’s job search website. 
-My responsibilities were designing and developing the backend side of the application 
-and communication with other backend teams.
+
+\begin{itemize}
+    \item Designed and developed the backend side of the job search website.
+    \item Developed and optimized frontend and backend CI/CD pipelines.
+    \item Developed an admin page for managing job search backend.
+    \item Developed a microservice for sending notification emails to users.
+    \item Communicated with other backend teams to integrate their 
+            services with ours using message queues. 
+\end{itemize}
