--- a/src/experience/yadro.tex
+++ b/src/experience/yadro.tex
@@ -1,3 +1,9 @@
-Working in a Telecom Department, developing network management and monitoring system for network elements on base stations. 
-Its functionality includes, but not limited to: configuration, network elements management, report and statistics gathering and updating. 
-Due to its use cases the system is under high load.
+I worked in a Telecom Department, developing network management and monitoring system for network elements on base stations. 
+
+\begin{itemize}
+    \item Following the move to RabbitMQ, refactored the largest's microservice integration 
+        tests to use the new message queue. 
+    \item Took a part in the team that was tasked with improving in-house testing framework.
+    \item Improved microservice testing for multiple microservices using Docker Compose based solution,
+        increasing developer productivity.  
+\end{itemize}
