--- a/src/experience/sports.tex
+++ b/src/experience/sports.tex
@@ -2,8 +2,17 @@ I was part of two key projects:
 
 \begin{itemize}
     \item I was a part of the statistics team in Sports.ru, the biggest russian-speaking sports media. 
-        Among other things I have single handedly developed the backend for auto and moto sport data storage, statistics and bets processing.
-    \item Backend development for a betting enthusiast oriented social network Betting Insider. 
-        Among my responsibilities were converting monolith to microservices, design and development of microservices, 
-        communication with management and frontend/mobile (iOS, Android) developers on implementation of new features and bug fixes.
-\end{itemize}
+        \begin{itemize}
+            \item Expanded the statistics database by adding new sports statistics providers.
+            \item Parsed statistics from various sources and integrated it into the database.
+            \item Singlehandedly added new backend microservices for automotosport statistics 
+                    support with CI/CD pipelines/monitoring and exposed GraphQL API for web and mobile clients. 
+            \item Built new microservice to display providers logos and banners on match pages which 
+                increased company's revenue.
+        \end{itemize}
+    \item Backend development for a betting enthusiast oriented social network - Betting Insider. 
+        \begin{itemize}
+            \item Broke down the monolith's user authentication functionality into a microservice.
+            \item Used APM tracing to improve SQL queries performance.
+        \end{itemize} 
+    \end{itemize}
