Refactor sports experience description for clarity and update contact information in CV

--- a/src/experience/sports.tex
+++ b/src/experience/sports.tex
@@ -1,7 +1,7 @@
 I was part of two key projects:
 
 \begin{itemize}
-    \item I was a part of the statistics team in Sports.ru, the biggest russian-speaking sports media. 
+    \item I was a part of company's sport statistics team. 
         \begin{itemize}
             \item Expanded the statistics database by adding new sports statistics providers.
             \item Parsed statistics from various sources and integrated it into the database.
