--- a/src/georgy_bokovikov_cv.tex
+++ b/src/georgy_bokovikov_cv.tex
@@ -53,8 +53,10 @@
     \vspace{.25em}
 
     \underline{fulstaph@gmail.com} {\scriptsize$\bullet$}
-    +(995)598915303{\scriptsize$\bullet$}
+    +(995) 598915303 {\scriptsize$\bullet$}
     \href{https://www.linkedin.com/in/bokovikovg/}{\underline{LinkedIn}} {\scriptsize$\bullet$}
+    \href{https://t.me/fulstaph}{\underline{Telegram}} {\scriptsize$\bullet$}
+    \href{https://github.com/fulstaph}{\underline{GitHub}} {\scriptsize$\bullet$} 
     Tbilisi, Georgia 
 }
 
