--- a/src/summary.tex
+++ b/src/summary.tex
@@ -1,22 +1,15 @@
 \section{Summary}
-I’m a skilled and enthusiastic software engineer with over three years
-of professional experience in backend software development, mainly in
-Golang. I have a passion for writing clean and maintainable code,
-automating things, implementing well-structured and scalable
-application architecture.
+I am a skilled software engineer with over four years of experience in backend development, 
+primarily using Golang. I’m passionate about writing clean, maintainable code 
+and building scalable, well-structured application architecture.  
+
 
 \vspace{0.4em}
-As a team player I like to have open communication with my
-colleagues and foster diverse views and perspectives as well as a
-respectful and comfortable working environment.
-
-\vspace{0.4em}
-I’m highly motivated to apply my skills and expertise to explore and
-implement new and exciting ideas to solve people’s problems.
+As a motivated team player, I value open communication and fostering a respectful, 
+inclusive work environment. I’m eager to apply my expertise to solve 
+meaningful problems and explore innovative solutions.  
 
 % \vspace{0.4em}
 % I take ownership of developing a universal code base and approaches to increase consistency across projects. I'm eager to try new stacks and languages to choose the best solution.
 
-% \vspace{0.4em}
-% Fun fact: Linux has been my home system since 2017.
 
