Update CV: Revise education details, enhance experience descriptions, and improve skills and summary sections for clarity and detail

--- a/src/experience/main.tex
+++ b/src/experience/main.tex
@@ -1,8 +1,16 @@
 \section{Experience}
 
 \begin{experienceEntry}
+{{\underline{Freelance}}}
+{}{Nov 2024 - Present}{Golang Backend Developer}
+    {\input{experience/freelance.tex}}
+\end{experienceEntry}
+
+\vspace{1em}
+
+\begin{experienceEntry}
 {\href{https://yadro.com/}{\underline{YADRO}}}
-{Telecom}{Oct 2023 - Oct 2024}{Golang Backend Developer}
+{\textit{Leading Russian computer hardware manufacturer}}{Oct 2023 - Oct 2024}{Golang Backend Developer}
     {\input{experience/yadro.tex}}
 \end{experienceEntry}
 
@@ -10,7 +18,7 @@
 
 \begin{experienceEntry}
 {\href{https://softswiss.com}{\underline{SOFTSWISS}}}
-{iGaming}{Apr 2022 - Oct 2023}{Golang Backend Developer}
+{\textit{Industry Leader in iGaming software solutions development}}{Apr 2022 - Oct 2023}{Golang Backend Developer}
     {\input{experience/softswiss.tex}}
 \end{experienceEntry}
 
@@ -18,7 +26,7 @@
 
 \begin{experienceEntry}
 {\href{https://sports.ru}{\underline{Sports.ru}}}
-{The largest sports media in the country}{Oct 2020 - Apr 2022}{Golang Backend Developer}
+{\textit{Largest online sports media in Russia}}{Oct 2020 - Apr 2022}{Golang Backend Developer}
     {\input{experience/sports.tex}}
 \end{experienceEntry}
 
@@ -26,7 +34,7 @@
 
 \begin{experienceEntry}
 {\href{https://wildberries.ru}{\underline{Wildberries}}}
-{Largest Online Marketplace in Russia}{Jan 2020 - Oct 2020}{Full-stack Developer}
+{\textit{Largest Eastern Europe E-commerce platform}}{Jan 2020 - Oct 2020}{Full-stack Developer}
     {\input{experience/wildberries.tex}}
 \end{experienceEntry}
 
