--- a/src/experience/sports.tex
+++ b/src/experience/sports.tex
@@ -1,18 +1,14 @@
-I was part of two key projects:
-
 \begin{itemize}
-    \item I was a part of company's sport statistics team. 
+    \item Sport statistics team. 
         \begin{itemize}
-            \item Expanded the statistics database by adding new sports statistics providers.
-            \item Parsed statistics from various sources and integrated it into the database.
-            \item Singlehandedly added new backend microservices for automotosport statistics 
-                    support with CI/CD pipelines/monitoring and exposed GraphQL API for web and mobile clients. 
-            \item Built new microservice to display providers logos and banners on match pages which 
-                increased company's revenue.
+            \item Introduced new sports statistics data by parsing provider's XML API, leading to increase in .
+            \item Delivered new backend microservices backed by MySQL and RabbitMQ to handle automotosport statistics 
+                    with Gitlab CI/CD pipelines/monitoring, and exposed GraphQL API for web and mobile clients. 
+            \item Built new microservice to display providers logos and banners on match pages which increased conversion.
         \end{itemize}
     \item Backend development for a betting enthusiast oriented social network - Betting Insider. 
         \begin{itemize}
             \item Broke down the monolith's user authentication functionality into a microservice.
-            \item Used APM tracing to improve SQL queries performance.
+            \item Improved SQL queries performance by 20\% using Kibana and APM tracing.
         \end{itemize} 
-    \end{itemize}
+\end{itemize}
