--- a/src/experience/wildberries.tex
+++ b/src/experience/wildberries.tex
@@ -1,11 +1,6 @@
-I’ve started as an intern and have grown to the position of a junior backend 
-developer working mainly on developing company’s job search website. 
-
 \begin{itemize}
-    \item Designed and developed the backend side of the job search website.
-    \item Developed and optimized frontend and backend CI/CD pipelines.
-    \item Developed an admin page for managing job search backend.
+    \item Designed, developed and deployed the backend API of the job search website with Golang and PostgreSQL.
+    \item Developed and optimized frontend and backend Gitlab CI/CD pipelines.
+    \item Developed an admin page for managing job search API backend using Typescript and React.js.
     \item Developed a microservice for sending notification emails to users.
-    \item Communicated with other backend teams to integrate their 
-            services with ours using message queues. 
 \end{itemize}
