--- a/src/experience/yadro.tex
+++ b/src/experience/yadro.tex
@@ -1,9 +1,7 @@
-I worked in a Telecom Department, developing network management and monitoring system for network elements on base stations. 
-
 \begin{itemize}
-    \item Following the move to RabbitMQ, refactored the largest's microservice integration 
-        tests to use the new message queue. 
-    \item Took a part in the team that was tasked with improving in-house testing framework.
-    \item Improved microservice testing for multiple microservices using Docker Compose based solution,
+    \item Refactored largest microservice integration 
+        tests, following the move to RabbitMQ. 
+    \item Took a part in the team tasked with developing an in-house testing framework.
+    \item Improved microservice testing for multiple microservices using Docker Compose based solution and Python scripts,
         increasing developer productivity.  
 \end{itemize}
