--- a/src/skills.tex
+++ b/src/skills.tex
@@ -1,2 +1,13 @@
 \section{Skills}
-Golang, Python, Docker, Kubernetes, Redis, PostgreSQL, MySQL, AWS S3, Linux, Code review
+
+\textbf{Languages:} Golang, Python, PHP, SQL \\
+\textbf{Frameworks/Libraries:} gRPC/Protobuf, Gin, Echo, GraphQL, Laravel \\
+\textbf{Databases:} PostgreSQL, MySQL, Redis, Scylla \\
+\textbf{Infrastructure:} Docker, Docker Compose, Kubernetes, Nginx, RabbitMQ, GCP, AWS S3 \\
+\textbf{CI/CD:} Gitlab CI, Github Actions, Jenkins, Helm \\
+\textbf{Tools:} Git, Linux, REST/gRPC APIs, OpenAPI/Swagger, ELK, Prometheus, Grafana \\
+\textbf{Testing:} Unit Testing, Integration Testing, Load Testing, JMeter, Postman \\
+\textbf{Concepts:} Microservice Architecture, Clean Architecture, Concurrency, Code Review, RESTful API, Agile/Scrum \\
+
+%Golang, Python, Docker, Kubernetes, Google Cloud Platform (GCP), Redis, PostgreSQL, 
+%MySQL, AWS S3, ELK, Linux, Code review
