--- a/src/summary.tex
+++ b/src/summary.tex
@@ -1,15 +1,6 @@
-\section{Summary}
-I am a skilled software engineer with over four years of experience in backend development, 
-primarily using Golang. I’m passionate about writing clean, maintainable code 
-and building scalable, well-structured application architecture.  
-
-
-\vspace{0.4em}
-As a motivated team player, I value open communication and fostering a respectful, 
-inclusive work environment. I’m eager to apply my expertise to solve 
-meaningful problems and explore innovative solutions.  
-
-% \vspace{0.4em}
-% I take ownership of developing a universal code base and approaches to increase consistency across projects. I'm eager to try new stacks and languages to choose the best solution.
-
-
+%\section{Summary}
+\textbf{Backend developer} with over 5 years of experience. 
+Proficient in Golang, PostgreSQL, Docker, and Kubernetes. 
+Experienced in improving development and deployment processes, 
+building scalable high-performance applications within both microservices 
+and monolithic architectures.
