--- a/src/education.tex
+++ b/src/education.tex
@@ -1,3 +1,3 @@
 \section{Education}
-\begin{educationEntry}{BA in Applied Mathematics and Informatics, RTU MIREA}{Russia, 2019}
+\begin{educationEntry}{BA in Applied Mathematics and Computer Science, RTU MIREA}{Moscow, Russia, 2019}
 \end{educationEntry}
