--- a/src/experience/softswiss.tex
+++ b/src/experience/softswiss.tex
@@ -1,8 +1,6 @@
-I worked on a back office application used for management of online casinos. 
-
 \begin{itemize}
-    \item Used profiling and tracing to improve performance of the system most used queries.
-    \item Initiated the codebase's refactor using newly introduced Go's Generics feature to improve 
+    \item Improved performance of the system most used queries by 30\% using pprof and tracing.
+    \item Initiated the codebase refactor using newly introduced Go's Generics feature to improve 
             code quality and readability. 
     \item Developed a new feature to handle large reports export requests for clients which reduced developers' 
             time spent on manual data export by 50\%. 
