--- a/src/experience/main.tex
+++ b/src/experience/main.tex
@@ -1,8 +1,13 @@
 \section{Experience}
 
 \begin{experienceEntry}
+{\href{https://epam.com}{\underline{EPAM}}}
+{\textit{Software engineering services provider}}{May 2025 - Present}{Backend Developer}
+\end{experienceEntry}
+
+\begin{experienceEntry}
 {{\underline{Freelance}}}
-{}{Nov 2024 - Present}{Golang Backend Developer}
+{}{Nov 2024 - Apr 2025}{Golang Backend Developer}
     {\input{experience/freelance.tex}}
 \end{experienceEntry}
 
